--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 main {
     width: 100%;
-    border: solid 1px;
-    display: inline-block;
+    display:inline-block;
 }
 div {
     border: solid 1px;
@@ -12,13 +11,12 @@ div {
 nav,
 section {
     border: solid 1px;
-    margin: 5px;
     width: 99%;
-    align-items: center;
+    margin: 5px;
 }
 nav {
     background-color: rgb(84, 206, 36);
-    float: left;
+    float: none;
 }
 section {
     background-color: coral;
